Fix: floating filter button on mobile (#415)
* fix: floating filter button on mobile

* fix: no overflow and height of mobile floater

* fix: mobile floater button floating behaviour

* fix: mobile floater button styling and a11y

* fix: delete unnecessary attributes

* fix: guard elements only used on certain pages

--- a/src/styles/includes/_jobs-page.scss
+++ b/src/styles/includes/_jobs-page.scss
@@ -66,47 +66,17 @@ $filter-bar-height--desktop: 11.8rem;
 			text-align: right;
 			max-width: 100%;
 			overflow: hidden;
-			z-index: 100;
+			z-index: 12;
 
 			.toggle-button {
-				@include icon-button();
-
 				position: relative;
 				cursor: pointer;
-				transform: translateX(4rem);
+				transform: translateX(100%);
 				transition: transform 0.4s ease-in;
 			}
 
 			.freeze-scroll & {
 				display: none;
-			}
-
-			.is-floating ~ & {
-				.toggle-button {
-					transform: translateX(-4rem);
-				}
-			}
-
-			svg {
-				position: absolute;
-				width: 100%;
-				height: 100%;
-				left: 4px;
-				top: 5px;
-				filter: invert(1);
-			}
-		}
-
-		.js-toggle-filter-bar--mobile {
-			position: relative;
-
-			svg {
-				position: absolute;
-				width: 16px;
-				height: 16px;
-				left: 50%;
-				top: 50%;
-				transform: translate(-50%, -50%);
 			}
 		}
 	}
@@ -179,6 +149,12 @@ $filter-bar-height--desktop: 11.8rem;
 		// TODO: find an elegant solution for animation
 		&.is-open {
 			max-height: initial;
+		}
+
+		&.is-floating ~ .mobile-floater {
+			.toggle-button {
+				transform: translateX(-50%);
+			}
 		}
 
 		// this is only for the mobile view
@@ -336,8 +312,11 @@ $filter-bar-height--desktop: 11.8rem;
 	}
 
 	.job-list {
-		padding-top: $spacing--600;
 		margin-top: 0;
+
+		@include bp-s-and-above {
+			padding-top: $spacing--600;
+		}
 
 		// A category holds subheadline for discipline
 		// and a list for the offerings
@@ -362,7 +341,6 @@ $filter-bar-height--desktop: 11.8rem;
 				top: 0;
 				margin: 0;
 				z-index: 0;
-				padding-right: 23rem;
 
 				@include bp-s-and-above {
 					top: $filter-bar-height--desktop + $spacing--400;
@@ -374,7 +352,7 @@ $filter-bar-height--desktop: 11.8rem;
 					@include spacing-400(padding-bottom);
 
 					background: $color-primary--white;
-					z-index: 12;
+					z-index: 11;
 
 					.is-dark & {
 						background: transparent;
